--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,19 @@
 .exe
 carpeta_ignorada/
+Unidad2/ABC
+Unidad2/E04_ciclosWhile
+Unidad2/E05_Tablasdemultiplicar
+Unidad2/E06_Rendimiento
+Unidad2/T01_Rendimiento
+Unidad2/T02_SalasdeJuegos
+Unidad2/T03_MenúPizzas
+Unidad2/T04_Temperaturas
+Unidad2/T05_ProductosyPrecio
+Unidad2/T06_Decimal_a_Binario
+Unidad2/Tablasdemultiplicar
+Unidad1/01_holamundp
+Unidad1/02_parimpar
+Unidad1/3_tiposdedatos
+Unidad1/4_ciclos
+Unidad1/5_edades
+.vscode/settings.json
